--- a/_posts/2016-10-25-HEXO搭建个人博客.md
+++ b/_posts/2016-10-25-HEXO搭建个人博客.md
@@ -10,8 +10,6 @@ tag: 博客
  
 
 ## 正文：
-　这边教程是针对与Mac的，[参考链接](http://ibruce.info/2013/11/22/hexo-your-blog/?utm_source=tuicool)，由于原文讲到的hexo是以前的老版本，所以现在的版本配置的时候会有些改动。
-
 　之前是想着写博客，一方面是给自己做笔记，可以提升自己的写作、总结能力，一个技术点我们会使用，并不难，但是要做到让让别人也能听懂我们讲得，还是需要一定的技巧和经验的。很多类似于CSDN、博客园也都可以写文章，但是页面的样式我，不是太喜欢，简书还算好点得。最近看到一些大神们的博客（在我的友情链接里有），貌似都是用hexo写得，我也依葫芦画瓢的搭建了一个。不罗嗦了，直接上搭建步骤。
  
 ## 配置环境     
@@ -54,7 +52,6 @@ Node和Git都安装好后，可执行如下命令安装hexo：
 	hexo server   
 
 浏览器输入[http://localhost:4000](就可以看到最原始的效果了)
-我不知道你们能不能，反正我不能，因为我还有环境没配置好
 
 ### 常见的HEXO配置错误：
 
@@ -131,7 +128,7 @@ ERROR Plugin load failed: hexo-server
 
 	deploy:
 	  type: git
-	  repository: https://github.com/leopardpan/leopardpan.github.io.git
+	  repository: https://github.com/xxx/xxx.github.io.git
 	  branch: master
 
 执行如下命令才能使用git部署
@@ -144,7 +141,7 @@ ERROR Plugin load failed: hexo-server
 
 	hexo deploy
 
-　然后再浏览器中输入[http://leopardpan.github.io/](http://leopardpan.github.io/)就行了，我的 github 的账户叫 leopardpan ,把这个改成你 github 的账户名就行了
+　然后再浏览器中输入[http://xxx.github.io/](http://xxx.github.io/)就行了，我的 github 的账户叫 xxx ,把这个改成你 github 的账户名就行了
 
 ### 部署步骤
 
@@ -194,4 +191,4 @@ Markdown语法参考链接: [作业部落](https://www.zybuluo.com/mdeditor)
 
 <p> </p>
 
-转载请注明原地址，潘柏信的博客：[http://leopardpan.github.io](http://leopardpan.github.io) 谢谢！
+受到潘柏信的博客启发，拿出来共享[http://leopardpan.github.io](http://leopardpan.github.io) 谢谢！
