--- a/_posts/2016-07-16-JS数组对象常用方法.md
+++ b/_posts/2016-07-16-JS数组对象常用方法.md
@@ -28,9 +28,9 @@ splice（）方法向/从数组中添加/删除项目，然后返回被删除的
 Array.splice(index,howMany,item1,...,itemN)
 ```
 参数：
-index:必需，整数，规定添加或删除项目的位置，使负数可从数组处规定位置。
-howmany:必需，整数规定应该删除多少元素。
-item1,...,itemN:可选。向数组添加的新项目.
+ - index:必需，整数，规定添加或删除项目的位置，使负数可从数组处规定位置。
+ - howmany:必需，整数规定应该删除多少元素。
+ - item1,...,itemN:可选。向数组添加的新项目.
 
 
 
