--- a/_posts/2017-01-16-JS数组对象常用方法.md
+++ b/_posts/2017-01-16-JS数组对象常用方法.md
@@ -138,3 +138,7 @@ reduce和reduceRight[ECMAScript5]
 Array.reduce(callback(index,array,previousValue,currentValue),initialValue);//使用指定的方法将数组元素进行组合，按索引从低到高（从左到右） 
 Array.reduceRight(callback(index,array,previousValue,currentValue ), initialValue]); // 使用指定的方法将数组元素进行组合，按索引从高到低（从右到左)
 ```
+[1,2,3].reduce(function(x,y){//return 106;
+	return x + y; 
+},100);
+```
