--- a/_posts/2017-03-15-由一次冲突想到的.md
+++ b/_posts/2017-03-15-由一次冲突想到的.md
@@ -1,13 +1,21 @@
 ---
 layout: post
-title: git常用命令
+title: 由一次冲突想到的
 date: 2017-03-15 
 tags: 博客   
 ---
 ### 前言
+
  之前在工作中出现了一次版本冲突的问题，上网搜索了一下。发现是远程仓库与本地仓库冲突导致的，在解决之后就想着记录一下，大致思路是，先把远程仓库的代码pull下来，然后把代码合并，再push上去。
+
+ ```
+ - git pull origin master
+ - gir push origin master
+ ```
+
  [参考](http://stackoverflow.com/questions/10298291/cannot-pushto-github-keeping-saying-need-merge)
 
+顺便总结一下git命令
 
 ### Git常用操作命令：
 
