--- a/_posts/2017-04-11-从输入url到页面展示发生了什么.md
+++ b/_posts/2017-04-11-从输入url到页面展示发生了什么.md
@@ -26,9 +26,13 @@ tags: 博客
 
 #### 1、输入地址
 
+<hr>
+
 当我们开始在浏览器中输入网址时，浏览器已经开始智能匹配可得的url了，它会从历史记录，书签等地方，找到已经输入的字符串可能对应的url，然后智能提示，让你可以补全url地址。对于Google Chrome，它甚至可以从缓存中把网页展示出来。
 
 #### 2、浏览器查找域名的IP地址
+
+<hr>
 
 1、请求一旦发起，浏览器首先要做的是解析域名，一般来说，浏览器会首先查看本地硬盘的hosts文件，查看其中有没有与这个域名对应的规则，如果有则直接使用hosts里的ip地址
 
@@ -68,6 +72,22 @@ DNS（Domain Name System，域名系统），因特网上作为域名和IP地址
 客户端DNS程序再继续向这些DNS服务器进行查询。直到查询到结果为止。也就是说，迭代解析只是帮你找到相关的服务器而已，而不会帮你去查。比如说：baidu.com的服务器ip地址为192.168.4.5这里，你自己去查询吧，本服务器比较忙，只能帮你到这了。
 
 ![](/images/posts/170411/迭代解析.png)
+
+3）DNS域名名称空间的组织方式
+
+我们在前面说的根DNS服务器，域DNS服务器，这些都是DNS域名称空间的组织方式。按照功能命名空间中用来描述DNS域民称的五个类别的介绍如下图所示：
+
+![](/images/posts/170411/域名讲解.png)
+
+4）DNS负载均衡
+
+当一个网站有足够多的用户时，如果每次请求的资源都位于同一台机器上面，那么这台机器随时都会崩掉。我们的解决办法就是使用DNS负载均衡技术，它的原理是在DNS服务器中为同一个主机名配置多个IP地址，在应答DNS查询时，DNS服务器对每个查询将以DNS文件中主机记录的IP地址按顺序返回不同的解析结果，将客户端的访问引导到不同的机器上去，使得不同的客户端访问不同的服务器，从而达到负载均衡的目的。例如可以根据每台机器的负载量，该机器离用户地理位置的距离等。
+
+#### 3、浏览器向web服务器发送一个HTTP请求
+
+<hr>
+
+
 
 
 
