--- a/_posts/2017-04-11-从输入url到页面展示发生了什么.md
+++ b/_posts/2017-04-11-从输入url到页面展示发生了什么.md
@@ -309,8 +309,62 @@ Content-Type: text/html;charset=ISO-8859-1   Content-Length: 122   ＜html＞
 
 ![](/images/posts/170411/响应头.png)
 
+**响应正文**
+
+包含我们需要的一些信息，比如cookie，html，image，后端返回的请求数据等。这里需要注意的是，响应正文和响应头之间有一行空格，比欧式响应头的信息到空格为止，下图为fiddle抓到的请求正文：
+
+![](/images/posts/170411/相应正文.png)
+
+#### 8、浏览器显示HTML
+
+<hr>
+
+在浏览器没有完全接受HTML文档时，他就开始显示这个页面了，浏览器是如何把页面展示在屏幕上呢，下面我们以谷歌浏览器的内核渲染过程展示：
+
+解析html以构建dom树 -> 构建render树 -> 布局render树 -> 绘制render数
+
+![](/images/posts/170411/浏览器解析html.png)
+
+浏览器在解析html文件时，会"自上而下"加载，并在加载过程中进行解析渲染。在解析过程中，如果遇到请求的外部资源时，如图片，css，js，iconfont时，请求是异步的，并不会影响html文档加载
+
+解析过程中，浏览器首先会解析HTML文件构建DOM树，然后解析CSS文件构建渲染树，等到渲染树构建完成后，浏览器开始布局渲染树并将其绘制到屏幕上。这个过程比较复杂，涉及两个概念：reflow（回流）和repain（重绘）
+
+DOM节点在各个元素都是以盒模型的形式存在，这些都是需要浏览器去计算位置和大小等，这个过程称为reflow；当盒模型的位置，大小以及其他属性，如颜色，字体确定下来之后，浏览器便开始绘制内容，这个过程称为repain。
+
+首页在首次加载时必然会经历reflow和repain。reflow和repain过程是非常消耗性能的，尤其是在移动设备上，她会破坏用户体验，有时会造成页面卡。因此我们要尽可能的减少reflow和repain。
 
 
+
+当文档加载过程中遇到了js文件，html文档会挂起渲染（加载解析渲染同步）的线程，不仅要等待文档中js文件加载完毕，还要等待解析完毕，才可以恢复html文档的渲染过程。因此JS会修改DOM，最经典的document.write，这意味着，在JS执行完毕前，后续所有的资源可能没有必要，这是js阻塞后续资源下载的根本原因。所以，js是放到html文档末尾的。
+
+JS的解析是由浏览器的JS解析引擎完成的，比如谷歌的V8.JS是单线程运行，也就是说，在同一时期内只能做一件事，所有的任务都需要排队，前一个任务结束后，后一个任务才开始。但是又存在某些任务比较耗时，如IO读写等，所以需要一种机制可以执行排在后面的任务，这就是：同步任务和异步任务。
+
+JS的执行机制就是可以看做是一个主线程加上一个任务队列，同步任务就是放在主线程上执行的任务，异步任务是放在任务队列中的任务。所有的同步任务在主线程上执行，形成一个执行栈；异步任务有了运行结果就会放到任务队列中放置一个事件；脚本运行时先依次运行执行栈，然后会从任务队列里提取事件，运行任务队列的任务，这个过程是不断重复的，所以又叫做事件循环。
+
+![](/images/posts/170411/JS%20runtime.png)
+
+#### 9、浏览器发送请求获取嵌入在HTML中的资源（如图片，音频，视频，CSS，JS等）
+
+这个步骤可以并列在第八步中，在浏览器显示HTML时，他会注意到需要获取的其他地址内容的标签。这时浏览器会发送一个获取请求来重新获取这些文件。例如我们要获取的一些图片，css，js
+
+图片：http://dwz.cn/5K6SvC；
+
+CSS：http://static.ak.fbcdn.net/rsrc.php/z448Z/hash/2plh8s4n.css
+
+JS：http://static.ak.fbcdn.net/rsrc.php/zEMOA/hash/c8yzb6ub.js
+
+当然这些过程任然经历和html读取类似的过程。所以浏览器会DNS中查找这些域名，发送请求，重定向等等。
+
+不想动态页面，静态文件会允许浏览器进行缓存。有点文件可能会不需要与服务器通讯，而从缓存中直接读取，或者可以放到CDN中
+
+
+参考文献：
+
+https://segmentfault.com/a/1190000006879700  
+
+http://igoro.com/archive/what-really-happens-when-you-navigate-to-a-url/
+
+http://zrj.me/archives/589 
 
 
 
