--- a/_posts/2017-06-04-读张鑫旭大神文章的感悟..md
+++ b/_posts/2017-06-04-读张鑫旭大神文章的感悟..md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 读《代码的未来》
-date: 2017-06-03 
+title: 读张鑫旭大神文章的感悟
+date: 2017-06-04
 tags: 读书
 ---
 
@@ -32,5 +32,4 @@ tags: 读书
 
  这两个问题是一块回答的，鑫旭老师说出了一个“禀赋作用”，讲的是当个人一旦拥有某项物品，那么他对该物品价值的评价要比未拥有之前大大增加，类似的意思就是自己想的总比没有时高一点。同时他举了一个自己的例子，解释了，当我们程序员很努力地去优化加载时间时，对于普通用户来说根本是无关紧要的，后面的话，对于现在的我还是感觉不到的， 但是他的告诫让我受益匪浅。
 
- 
 
