--- a/_posts/2017-06-04-读张鑫旭大神文章的感悟..md
+++ b/_posts/2017-06-04-读张鑫旭大神文章的感悟..md
@@ -28,8 +28,29 @@ tags: 读书
 
  首先鑫旭老师指出了现在年轻人浮躁的毛病，嘿嘿，我也有，他通过讲些大学是读的一本《社会心理学》来告诫我们要学会自知，搞告诫我们从底层基础开始，一步一步的走，努力强大自己，到时定会有更大的发展。
 
- - [① 前端工程师的价值体现在哪里？](https://www.zhihu.com/question/19589966)[② 前端的意义是什么？](https://www.zhihu.com/question/44812950)
+- [① 前端工程师的价值体现在哪里？](https://www.zhihu.com/question/19589966)[② 前端的意义是什么？](https://www.zhihu.com/question/44812950)
 
  这两个问题是一块回答的，鑫旭老师说出了一个“禀赋作用”，讲的是当个人一旦拥有某项物品，那么他对该物品价值的评价要比未拥有之前大大增加，类似的意思就是自己想的总比没有时高一点。同时他举了一个自己的例子，解释了，当我们程序员很努力地去优化加载时间时，对于普通用户来说根本是无关紧要的，后面的话，对于现在的我还是感觉不到的， 但是他的告诫让我受益匪浅。
 
+- [学web前端开发，培训还是自学靠谱？](https://www.zhihu.com/question/31059577)
+
+ 在这里鑫旭老师说以自己的实践来说，自学更好，然后他又举了自己的例子，说到了自己大学的经历和自己毕业后的闭关，然后说出自己闭关后的成功，最后他说了姑娘的和他一样都是由兴趣入行，但是兴趣入行也要把自己的水平搞好，他说的”需要破釜沉舟，自断后路的勇气，前路一定挫折不断，如果没有足够的心理预期，最后可能就变成嘴上说说而已。什么“少走弯路”，有这种想法恰恰容易走弯路，认准目标，直接义无反顾往前冲，哪怕路上是荆棘是深沟，也不要退却，这此时绝对的直线之路，才是真正的捷径。所以，自学也好，培训也好，形式根本不重要，重要的是你的心到底有多勇敢”。给我了很大的启发，让我有了勇往之前的勇气，也让自己要更加努力。
+
+- [前端工程师和 UI 设计师该如何选择？](https://www.zhihu.com/question/21630068)
+
+ 这个问题，鑫旭老师说提问者具备了前端的优秀潜质，并且向提问者提出了些建议，感觉挺好的。
+
+- [如何面试前端工程师？](https://www.zhihu.com/question/19568008)
+
+这个问题对我来说还是比较遥远的，鑫旭老师他说他也不喜欢面试别人，但是他也提出了一些建议，他说“所以，我的策略是，把你最厉害的一面展示出来，然后，让我来看看你这个最厉害的一面到底有多厉害，然后根据其表述话语中一些有意思的信息进行深入提问，为什么会这样？有没有其他策略？当时你是怎么想的？最后效果怎么样？之类的问题，可以看看对待问题的思路，技术的深度是怎样的。”
+
+- [前端工程师们，你们对前端的兴趣是什么？](https://www.zhihu.com/question/29071150)
+
+这个问题如我自己来说的话，我认为我对前端的兴趣就是他是最直观和用户打交道，让我的成果能快速的让用户看到，这也和我的性格有关，我喜欢和别人分享我的成果，想让朋友立刻知道我做到或想到，我就是喜欢分享的人，我感觉在计算机行业里也只有前端能带来这样的感受，而在鑫旭老师的文章中他说他是被迫的，但是我感觉这是一种必然，如果他后端很厉害，他可能会选择后端，不然就不会有这么厉害的前端大神了。
+
+ - [Web前端开发前景如何？](https://www.zhihu.com/question/20287740)
+
+ 这个问题鑫旭老师说的是不可预期，但是对它抱有很大希望，因为他说越是简单的也越是容易深入人民的。也正是这个原因，也间接说明了问题一的由来，不过我们只要强大自己，有拿的出手的，一定会有自己的一片天。
+
+ 最后鑫旭老师告诫我们要果断，既然选择了，就一定要努力做下去。
 
